--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,3 +7,6 @@ phases:
     build:
         commands:
             - dotnet build -c Release ./ViocareWebApp/ViocareWebApp.csproj
+artifacts:
+  files:
+    - '**/*'
