--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,14 +1,30 @@
+# Based on https://github.com/PrakashTrove/AWS-CodeBuild-NetCore/blob/master/buildspec.yml
+# AWS CodeBuild spec to build an Elastic Beanstalk artifact for AWS CodePipeline to deploy
 version: 0.2
-
-phases:
-
+    
+phases:   
+  install:
+    runtime-versions:
+      dotnet: latest
+      
+  pre_build:
+    commands:
+      - echo Restore started on `date`
+      - dotnet restore ViocareWebApp/ViocareWebApp.csproj
+      
   build:
     commands:
-      - dotnet restore ViocareWebApp/ViocareWebApp.csproj
+      - echo Build started on `date`
       - dotnet build ViocareWebApp/ViocareWebApp.csproj
-      - dotnet publish ViocareWebApp/ViocareWebApp.csproj -o ./staging/app
-      - cp ./ViocareWebApp/aws-windows-deployment-manifest.json ./ViocareWebApp/staging/.
+      
+  post_build:
+    commands:
+      - echo Publish started on `date`
+      # https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/dotnet-linux-platform-bundle-app.html
+      - dotnet publish -c Release -r linux-x64 --self-contained false ViocareWebApp/ViocareWebApp.csproj
+      
 artifacts:
   files:
     - '**/*'
-  base-directory: 'ViocareWebApp/staging'
+  base-directory: ./bin/Release/netcoreapp3.1/linux-x64/publish/
+  discard-paths: no
