--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,30 +1,34 @@
 # Based on https://github.com/PrakashTrove/AWS-CodeBuild-NetCore/blob/master/buildspec.yml
 # AWS CodeBuild spec to build an Elastic Beanstalk artifact for AWS CodePipeline to deploy
 version: 0.2
-    
+
+env:
+  variables: ViocareWebApp
+  DOTNET_CORE_RUNTIME: 3.1
+  
 phases:   
   install:
     runtime-versions:
-      dotnet: latest
+      dotnet: ${DOTNET_CORE_RUNTIME}
       
   pre_build:
     commands:
       - echo Restore started on `date`
-      - dotnet restore ViocareWebApp/ViocareWebApp.csproj
+      - dotnet restore
       
   build:
     commands:
       - echo Build started on `date`
-      - dotnet build ViocareWebApp/ViocareWebApp.csproj
+      - dotnet build -c Release
       
   post_build:
     commands:
       - echo Publish started on `date`
       # https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/dotnet-linux-platform-bundle-app.html
-      - dotnet publish -c Release -r linux-x64 --self-contained false ViocareWebApp/ViocareWebApp.csproj
+      - dotnet publish -c Release -r linux-x64 -o ./build_output ./${PROJECT}/${PROJECT}.csproj --self-contained false
       
 artifacts:
   files:
     - '**/*'
-  base-directory: ./bin/Debug/netcoreapp3.1/linux-x64/
+  base-directory: ./build_output
   discard-paths: no
