--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,8 +3,9 @@
 version: 0.2
 
 env:
-  variables: ViocareWebApp
-  DOTNET_CORE_RUNTIME: 3.1
+  variables: 
+    PROJECT: ViocareWebApp
+    DOTNET_CORE_RUNTIME: 3.1
   
 phases:   
   install:
