--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,6 +21,7 @@ phases:
     commands:
       - echo Build started on `date`
       - dotnet build -c Release
+     # - dotnet test -c Release --logger trx --results-directory ./testResults
       
   post_build:
     commands:
@@ -33,3 +34,10 @@ artifacts:
     - '**/*'
   base-directory: ./build_output
   discard-paths: no
+
+#reports:
+ # ${PROJECT}:
+  #  file-format: VisualStudioTrx
+   # files:
+    #  - '**/*'
+    #base-directory: './testresults'
