--- a/ViocareWebApp/appsettings.Development.json
+++ b/ViocareWebApp/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "MYConfig": {
+    "ConnectionString":  "Connects to Development Database" 
   }
-}
+  }
