--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,5 +1,5 @@
 branch-defaults:
-  master:
+  circleci-project-setup:
     environment: ViocareWebApp
 global:
   application_name: ViocareWebApp-test
