--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -4,6 +4,6 @@ branch-defaults:
 global:
   application_name: ViocareWebApp
   default_ec2_keyname: development-2021
-  default_platform: .NET Core running on 64bit Amazon Linux 2/2.2.9
+  default_platform: 64bit Amazon Linux 2/2.2.9
   default_region: us-east-1
   sc: git
