--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
       name: windows/default
     steps:
       - checkout
+      -run:
+          name: "Deploying"
+          command: sudo pip install awsebcli --upgrade
       - run:
           name: "Deploying"
           command: eb deploy ViocareWebApp-test
