--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,8 @@ jobs:
       name: windows/default
     steps:
       - checkout
-      -run:
-          name: "Deploying"
-          command: sudo pip install awsebcli --upgrade
+      - run: sudo pip install awsebcli --upgrade
+      - run: echo AKIAXNVGZ2DF5UGNQBVT
       - run:
           name: "Deploying"
           command: eb deploy ViocareWebApp-test
