--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       name: windows/default
     steps:
       - checkout
+      - run: npm install
       - run: sudo pip install awsebcli --upgrade
       - run: echo AKIAXNVGZ2DF5UGNQBVT
       - run:
