--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ orbs:
 jobs:
   build:
     description: Build application with Release configuration
+    executor:
+     name: node/default
     steps:
       - checkout
       - run: npm install
