--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,14 @@
 version: 2.1
 
+orbs:
+windows: circleci/windows@2.2.0
+
+
 jobs:
   build:
     description: Build application with Release configuration
+  executor:
+    name: windows/default
     steps:
       - checkout
       - run: npm install
