--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,10 @@
 version: 2.1
 
-orbs:  
-  windows: circleci/node@4.1.0
-
 jobs:
   build:
     description: Build application with Release configuration
-    executor:
-      name: node/default
+    machine: # executor type
+      image: 64bit Amazon Linux 2/2.2.9
     steps:
       - checkout
       - run: npm install
