--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,10 @@ dependencies:
       - pip install awsebcli
 deployment:
   develop:
-    branch: develop
+    branch: circleci-project-setup
     commands:
       - eb use ViocareWebApp-test --viocare-VioscreenAPI default
       - eb deploy --viocare-VioscreenAPI default
+workflows:
+  build:
+    deployment
