--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     description: Build application with Release configuration
     machine: # executor type
-      image: Linux
+      image: ubuntu-1604:201903-01
     steps:
       - checkout
       - run: npm install
