--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,7 @@ jobs:
       image: ubuntu-1604:201903-01
     steps:
       - checkout
-      - run: npm install
-      - run: sudo pip install awsebcli --upgrade
+      - run: pip install awsebcli --upgrade
       - run: echo AKIAXNVGZ2DF5UGNQBVT
       - run:
           name: "Deploying"
