--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       image: ubuntu-1604:201903-01
     steps:
       - checkout
-      - run: pip install awsebcli --upgrade
+      - run: pip install awsebcli --upgrade pip
       - run: echo AKIAXNVGZ2DF5UGNQBVT
       - run:
           name: "Deploying"
