--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
             pip install --upgrade setuptools
             sudo apt install python3-pip python3-dev
             sudo pip3 install awsebcli --upgrade
-            sudo yum install dotnet-sdk-3.1
+            dotnet restore
             dotnet publish -c Release -r linux-x64 -o ./build_output ./${PROJECT}/${PROJECT}.csproj --self-contained false
       - run: echo AKIAXNVGZ2DF5UGNQBVT
       - run:
