--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     executor:
       name: win/default
     steps:
-      - checkout:
+      - checkout
       - restore_cache:
           keys:
             - dotnet-packages-v1-{{ checksum "ViocareWebApp.csproj" }}
