--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
   build:
     executor:
       name: win/default
+    working_directory: D:\ViocareWebApp\ViocareWebApp
     steps:
       - checkout
       - restore_cache:
