--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           command: dotnet.exe restore
       - run:
           name: "Run Build step"
-          command: dotnet.exe publish -c Release -r win10-x64
+          command: dotnet.exe publish -c Release -r win10-x64 ./${PROJECT}/${PROJECT}.csproj --self-contained false
       - run:
           name: "Test the executable"
           command: .\bin\Release\netcoreapp3.1\win10-x64\publish\ViocareWebApp.exe 
