--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,8 @@ jobs:
   build:
     executor:
       name: win/default
-    working_directory: C:\Users\circleci\project\HelloWorld
     steps:
-      - checkout:
-          path: C:\Users\circleci\project
+      - checkout
       - run:
           name: "Install project dependencies"
           command: dotnet.exe restore
