--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,9 @@ jobs:
           command: dotnet.exe publish -c Debug -r win10-x64
       - run:
           name: "Test the executable"
-          command: .\bin\Debug\netcoreapp3.1\win10-x64\publish\ViocareWebApp.exe 
+          command: .\bin\Release\netcoreapp3.1\win10-x64\publish\ViocareWebApp.exe 
       - store_artifacts:
-          path: .\bin\Debug\netcoreapp3.1\win10-x64\publish\ViocareWebApp.exe
+          path: .\bin\Release\netcoreapp3.1\win10-x64\publish\ViocareWebApp.exe
           
 workflows:
   hello-world:
